Currency exchange app is ready