@@ -1,19 +1,17 @@
 package ru.skillbox.currency.exchange.util;
 
 import javax.xml.bind.annotation.adapters.XmlAdapter;
-import java.math.BigDecimal;
 
 public class DecimalAdapter extends XmlAdapter<String, Double> {
     @Override
-    public Double unmarshal(String v) throws Exception {
+    public Double unmarshal(String v) {
         if (v == null || v.isEmpty()) return null;
-        // Заменяем запятую на точку для BigDecimal
         String normalized = v.trim().replace(',', '.');
-        return new Double(normalized);
+        return Double.valueOf(normalized);
     }
 
     @Override
-    public String marshal(Double aDouble) throws Exception {
+    public String marshal(Double aDouble) {
         return "";
     }
 
